{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 54,
  "lineage": "c12081d0-ec44-e50e-1d4a-4760a90dd0aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04219acffee857817",
            "arn": "arn:aws:ec2:us-west-2:914666654987:instance/i-078b97991440538d4",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 3000,
                "snapshot_id": "snap-0c44ffb9901b5511b",
                "throughput": 125,
                "volume_id": "vol-0192d886f34f03803",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078b97991440538d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072b5080c6815bcf1",
            "private_dns": "ip-10-0-0-100.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cbfbe7fe1b629ce5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069aa757191aa10dd",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e98f6ff8ffd15f8"
            ]
          },
          "dependencies": [
            "aws_launch_template.launcht-lexi",
            "aws_security_group.public_sg_lexi",
            "aws_subnet.public_subnet",
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:internet-gateway/igw-0c346a864bfea3109",
            "id": "igw-0c346a864bfea3109",
            "owner_id": "914666654987",
            "tags": {
              "Name": "example-internet-gateway-lexi"
            },
            "tags_all": {
              "Name": "example-internet-gateway-lexi"
            },
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "dependencies": [
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-terra-lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:914666654987:loadbalancer/app/example-load-balancer-terra-lexi/4a6d28056940c1c0",
            "arn_suffix": "app/example-load-balancer-terra-lexi/4a6d28056940c1c0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-load-balancer-terra-lexi-2119789875.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:914666654987:loadbalancer/app/example-load-balancer-terra-lexi/4a6d28056940c1c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-load-balancer-terra-lexi",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e73afbad0680e650"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-069aa757191aa10dd"
              },
              {
                "subnet_id": "subnet-0d2611ff44b5de239"
              }
            ],
            "subnets": [
              "subnet-069aa757191aa10dd",
              "subnet-0d2611ff44b5de239"
            ],
            "vpc_id": "vpc-00d42cf45cf6d1a96",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example-ls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:914666654987:listener/app/example-load-balancer-terra-lexi/4a6d28056940c1c0/ff553a0b0b8b0c68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:914666654987:listener/app/example-load-balancer-terra-lexi/4a6d28056940c1c0/ff553a0b0b8b0c68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:914666654987:loadbalancer/app/example-load-balancer-terra-lexi/4a6d28056940c1c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-terra-lexi",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-terra-lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:914666654987:targetgroup/example-target-group-terra-lexi/8c26bb47eaff7854",
            "arn_suffix": "targetgroup/example-target-group-terra-lexi/8c26bb47eaff7854",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:914666654987:targetgroup/example-target-group-terra-lexi/8c26bb47eaff7854",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-target-group-terra-lexi",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "dependencies": [
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:route-table/rtb-037d168721f418518",
            "id": "rtb-037d168721f418518",
            "owner_id": "914666654987",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c346a864bfea3109",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-route-table-lexi"
            },
            "tags_all": {
              "Name": "example-route-table-lexi"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-lexi",
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0153e357885071ac9",
            "route_table_id": "rtb-037d168721f418518",
            "subnet_id": "subnet-069aa757191aa10dd"
          },
          "dependencies": [
            "aws_internet_gateway.igw-lexi",
            "aws_route_table.rt-lexi",
            "aws_subnet.public_subnet",
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg_lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:security-group/sg-085f5806545a3c986",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085f5806545a3c986",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e98f6ff8ffd15f8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230621153931309800000003",
            "name_prefix": "terraform-",
            "owner_id": "914666654987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-private-security-group-lexi"
            },
            "tags_all": {
              "Name": "example-private-security-group-lexi"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg_lexi",
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg_lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:security-group/sg-06e98f6ff8ffd15f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e98f6ff8ffd15f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230621153929199400000001",
            "name_prefix": "terraform-",
            "owner_id": "914666654987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-public-security-group-lexi"
            },
            "tags_all": {
              "Name": "example-public-security-group-lexi"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:subnet/subnet-0ea89a834c3a71924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea89a834c3a71924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914666654987",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-subnet-lexi"
            },
            "tags_all": {
              "Name": "example-private-subnet-lexi"
            },
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "dependencies": [
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:subnet/subnet-069aa757191aa10dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069aa757191aa10dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914666654987",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-subnet-lexi"
            },
            "tags_all": {
              "Name": "example-public-subnet-lexi"
            },
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "dependencies": [
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:subnet/subnet-0d2611ff44b5de239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2611ff44b5de239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914666654987",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-subnet-lexi-b"
            },
            "tags_all": {
              "Name": "example-public-subnet-lexi-b"
            },
            "vpc_id": "vpc-00d42cf45cf6d1a96"
          },
          "dependencies": [
            "aws_vpc.terra-lexi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-lexi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:vpc/vpc-00d42cf45cf6d1a96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae223b2b014d19cc",
            "default_route_table_id": "rtb-0aeb4c00e03c54e33",
            "default_security_group_id": "sg-0e73afbad0680e650",
            "dhcp_options_id": "dopt-0a37b9c29d508d9fc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d42cf45cf6d1a96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aeb4c00e03c54e33",
            "owner_id": "914666654987",
            "tags": {
              "Name": "terra-lexi"
            },
            "tags_all": {
              "Name": "terra-lexi"
            }
          }
        }
      ]
    }
  ]
}